--- a/app/src/main/res/drawable/warning_card_task_part_background.xml
+++ b/app/src/main/res/drawable/warning_card_task_part_background.xml
@@ -4,8 +4,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="@dimen/button_corner_radius" />
-            <solid android:color="@android:color/white" />
+            <corners android:radius="@dimen/warning_frag_warning_card_stroke_width" />
+            <solid android:color="@color/warning_card_task_part_background" />
         </shape>
     </item>
 
