--- a/app/src/main/res/layout/fragment_warning.xml
+++ b/app/src/main/res/layout/fragment_warning.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:widget="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,37 +18,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/vertical_divider"
+        android:background="@color/warning_background"
         android:orientation="vertical">
+
         <LinearLayout
             style="@style/WarningLinearLayout"
             android:background="@android:color/white"
-            android:gravity="right">
+            android:gravity="right"
+            android:visibility="gone">
+
             <TextView
                 android:id="@+id/manage_warning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/ButtonStyle.Blue"
                 android:text="@string/manage_warning"/>
+
         </LinearLayout>
+
         <LinearLayout
-            style="@style/WarningLinearLayout"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/gray6">
-            <it.sephiroth.android.library.widget.HListView xmlns:widget="http://schemas.android.com/apk/res-auto"
+            android:padding="@dimen/warning_frag_warning_card_container_padding"
+            android:orientation="vertical">
+
+            <it.sephiroth.android.library.widget.HListView
                 android:id="@+id/warning_list"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/warning_frag_warning_group_height"
                 android:divider="@null"
-                widget:hlv_dividerWidth="@dimen/workers_hlist_divider_width" />
+                widget:hlv_dividerWidth="@dimen/workers_hlist_divider_width"
+                android:visibility="gone"/>
+
             <GridView
                 android:id="@+id/warning_cards"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:numColumns="@integer/warning_frag_gridview_column_count"
                 android:verticalSpacing="@dimen/warning_frag_warning_cards_vertical_spacing"
-                android:horizontalSpacing="@dimen/warning_frag_warning_cards_horizontal_spacing"
-                android:layout_marginTop="@dimen/warning_frag_warning_cards_margin_top"/>
+                android:horizontalSpacing="@dimen/warning_frag_warning_cards_horizontal_spacing" />
+
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
