--- a/app/src/main/res/layout/warning_frag_warning_group_itemview.xml
+++ b/app/src/main/res/layout/warning_frag_warning_group_itemview.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/warning_frag_group_padding">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/warning_card_task_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -16,7 +16,7 @@
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/name"
+        android:layout_toRightOf="@id/warning_card_task_name"
         android:layout_marginLeft="@dimen/warning_frag_group_count_margin_left"
         android:textColor="@android:color/white"
         android:background="@drawable/bg_solid_textview_bg_gray"
