--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -149,4 +149,13 @@
     <color name="main_information_list_divider_color">#FFE1E1E1</color>
     <color name="main_information_list_delay_time_text_color">#FFE9573F</color>
 
+    <!-- Warning -->
+    <color name="warning_background">@android:color/white</color>
+    <color name="warning_card_task_part_background">#FFD9534F</color>
+    <color name="warning_card_stroke_color">#FFE1E1E1</color>
+    <color name="warning_card_task_part_text_color">@android:color/white</color>
+    <color name="warning_card_warning_part_text_color">@android:color/black</color>
+    <color name="warning_card_time_part_text_color">@android:color/black</color>
+
+
 </resources>
