--- a/app/src/main/res/layout/fragment_warning.xml
+++ b/app/src/main/res/layout/fragment_warning.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/ButtonStyle.Blue"
-                android:text="@string/manage_warning"/>
+                android:text="@string/warning_manage_warning"/>
 
         </LinearLayout>
 
