--- a/app/src/main/res/layout/warning_frag_warning_card_itemview.xml
+++ b/app/src/main/res/layout/warning_frag_warning_card_itemview.xml
@@ -33,16 +33,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:paddingTop="@dimen/warning_frag_warning_card_warning_part_padding_vertical"
+        android:paddingBottom="@dimen/warning_frag_warning_card_warning_part_padding_vertical"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/warning_card_manager"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/warning_frag_warning_card_text_size"
-            android:textColor="@color/warning_card_warning_part_text_color"
-            android:layout_marginTop="@dimen/warning_frag_warning_card_vertical_margin"
-            android:layout_marginBottom="@dimen/warning_frag_warning_card_vertical_margin"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/warning_card_manager_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textColor="@color/warning_card_warning_part_text_color"
+                android:text="@string/warning_card_pic"/>
+
+            <TextView
+                android:id="@+id/warning_card_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/warning_frag_warning_card_warning_part_content_margin_left"
+                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textColor="@color/warning_card_warning_part_text_color"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/warning_card_warning_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textColor="@color/warning_card_warning_part_text_color"
+                android:text="@string/warning_card_warning"/>
+
+            <TextView
+                android:id="@+id/warning_card_warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/warning_frag_warning_card_warning_part_content_margin_left"
+                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textColor="@color/warning_card_warning_text_color"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
