[MainInfo] Modify pic in warning item from worker to manager

--- a/app/src/main/res/layout/main_information_list_warning_content.xml
+++ b/app/src/main/res/layout/main_information_list_warning_content.xml
@@ -47,7 +47,7 @@
         android:layout_weight="1"
         android:gravity="center">
         <TextView
-            android:id="@+id/worker"
+            android:id="@+id/manager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14dp"
