--- a/app/src/main/res/drawable/task_card_background.xml
+++ b/app/src/main/res/drawable/task_card_background.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?colorControlHighlight">
 
-    <corners android:radius="@dimen/task_card_radius" />
-    <solid android:color="@color/task_card_background_color" />
-    <stroke android:width="1dp" android:color="@color/task_card_background_stroke_color" />
+    <item>
+        <shape android:shape="rectangle">
 
-</shape>
+            <corners android:radius="@dimen/task_card_radius" />
+            <solid android:color="@color/task_card_background_color" />
+            <stroke android:width="1dp" android:color="@color/task_card_background_stroke_color" />
+
+        </shape>
+    </item>
+
+</ripple>
+
+
