--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,8 +45,11 @@
         <item name="android:windowBackground">@color/main_window_background_color</item>
         <item name="android:dropDownListViewStyle">@style/CommonSpinnerStyle</item>
     </style>
-    <style name="PopupActivityTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" >
+    <style name="PopupActivityTheme.AppBarOverlayBlack" parent="ThemeOverlay.AppCompat.ActionBar" >
         <item name="colorControlNormal">@color/action_bar_primary_color</item>
+    </style>
+    <style name="PopupActivityTheme.AppBarOverlayWhite" parent="ThemeOverlay.AppCompat.ActionBar" >
+        <item name="colorControlNormal">@android:color/white</item>
     </style>
     <style name="PopupActivityTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
