--- a/app/src/main/res/layout/activity_add_warning.xml
+++ b/app/src/main/res/layout/activity_add_warning.xml
@@ -24,44 +24,71 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp">
-            <TextView
-                android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="警訊"/>
-            <Spinner
-                android:id="@+id/warning_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="警訊"/>
+                <Spinner
+                    android:id="@+id/warning_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="警訊負責人"/>
+                <Spinner
+                    android:id="@+id/manager_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/warning_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:gravity="top|left"
+                    android:hint="詳細內容..." />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true">
             <TextView
+                android:id="@+id/create_warning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="警訊負責人"/>
-            <Spinner
-                android:id="@+id/manager_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="新增警訊"/>
         </LinearLayout>
+    </RelativeLayout>
 
-    </LinearLayout>
 
 
 </LinearLayout>
