--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="blue_button_background_color">#FF428BCA</color>
     <color name="green_button_background_color">#FF5CB85C</color>
     <color name="gray_button_background_color">#FFE1E1E1</color>
+    <color name="red_button_background_color">#D9534F</color>
     <color name="title_edit_text_text_color">#FF4A4A4A</color>
     <color name="square_avatar_background_color">#FFCFCFCF</color>
     <color name="square_avatar_stroke_color">#FF8E8E8E</color>
