--- a/app/src/main/res/layout/activity_detailed_task.xml
+++ b/app/src/main/res/layout/activity_detailed_task.xml
@@ -44,9 +44,98 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:padding="20dp"
+            android:layout_height="@dimen/detailed_task_information_height"
+            android:layout_marginTop="@dimen/detailed_task_information_padding_top_left_right"
+            android:layout_marginLeft="@dimen/detailed_task_information_padding_top_left_right"
+            android:layout_marginRight="@dimen/detailed_task_information_padding_top_left_right"
+            android:background="@drawable/detailed_task_information_background"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/detailed_information_case_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/detailed_task_information_text_size"
+                android:textColor="@color/detailed_task_information_text_color"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/detailed_task_information_stroke_color"/>
+
+            <TextView
+                android:id="@+id/detailed_information_task_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/detailed_task_information_text_size"
+                android:textColor="@color/detailed_task_information_text_color"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/detailed_task_information_stroke_color"/>
+
+            <TextView
+                android:id="@+id/detailed_information_expected_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/detailed_task_information_text_size"
+                android:textColor="@color/detailed_task_information_text_color"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/detailed_task_information_stroke_color"/>
+
+            <TextView
+                android:id="@+id/detailed_information_spent_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/detailed_task_information_text_size"
+                android:textColor="@color/detailed_task_information_text_color"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/detailed_task_information_stroke_color"/>
+
+            <TextView
+                android:id="@+id/detailed_information_equipment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/detailed_task_information_text_size"
+                android:textColor="@color/detailed_task_information_text_color"
+                android:gravity="center"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/detailed_task_information_stroke_color"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/detailed_information_warning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/detailed_task_information_text_size"
+                    android:padding="@dimen/detailed_task_information_warning_padding"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
