--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -268,6 +268,11 @@
     <!-- Detailed task -->
     <dimen name="detailed_task_actionbar_task_text_size">25dp</dimen>
     <dimen name="detailed_task_actionbar_case_text_size">16dp</dimen>
+    <dimen name="detailed_task_log_padding_left_right">24dp</dimen>
+    <dimen name="detailed_task_information_padding_top_left_right">24dp</dimen>
+    <dimen name="detailed_task_information_height">50dp</dimen>
+    <dimen name="detailed_task_information_text_size">17dp</dimen>
+    <dimen name="detailed_task_information_warning_padding">4dp</dimen>
 
     <!-- Overview-->
     <dimen name="ov_left_pane_width">227dp</dimen>
