--- a/app/src/main/res/layout/activity_add_warning.xml
+++ b/app/src/main/res/layout/activity_add_warning.xml
@@ -66,8 +66,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:focusableInTouchMode="true">
                 <EditText
+                    android:imeOptions="flagNoExtractUi"
                     android:id="@+id/warning_text"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
