--- a/app/src/main/res/layout/fragment_detailed_task_status.xml
+++ b/app/src/main/res/layout/fragment_detailed_task_status.xml
@@ -20,6 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:text="@string/worker_ov_worker_tab_title_worker_status"
             android:textColor="@color/gray1"
             android:textSize="18dp" />
@@ -34,7 +36,7 @@
             android:hint="@string/worker_ov_editText_record_hint"
             android:padding="@dimen/worker_status_ov_top_pane_et_record_padding"
             android:textColor="@color/gray1"
-            android:textSize="16dp" />
+            android:textSize="16dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
