--- a/app/src/main/res/layout/warning_frag_warning_card_itemview.xml
+++ b/app/src/main/res/layout/warning_frag_warning_card_itemview.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/warning_card_task_part_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
