--- a/app/src/main/res/layout/warning_card.xml
+++ b/app/src/main/res/layout/warning_card.xml
@@ -16,18 +16,18 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/warning_card_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/warning_card_task_part_text_color"
+            android:textSize="@dimen/warning_frag_warning_card_warning_text_size" />
+
+        <TextView
             android:id="@+id/warning_card_task_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/warning_card_task_part_text_color"
-            android:textSize="@dimen/warning_frag_warning_card_text_size"/>
-
-        <TextView
-            android:id="@+id/warning_card_case_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/warning_card_task_part_text_color"
-            android:textSize="@dimen/warning_frag_warning_card_text_size" />
+            android:textSize="@dimen/warning_frag_warning_card_task_text_size"/>
 
     </LinearLayout>
 
@@ -49,7 +49,7 @@
                 android:id="@+id/warning_card_manager_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textSize="@dimen/warning_frag_warning_card_manager_text_size"
                 android:textColor="@color/warning_card_warning_part_text_color"
                 android:text="@string/warning_card_pic"/>
 
@@ -58,31 +58,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/warning_frag_warning_card_warning_part_content_margin_left"
-                android:textSize="@dimen/warning_frag_warning_card_text_size"
+                android:textSize="@dimen/warning_frag_warning_card_manager_text_size"
                 android:textColor="@color/warning_card_warning_part_text_color"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/warning_card_warning_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/warning_frag_warning_card_text_size"
-                android:textColor="@color/warning_card_warning_part_text_color"
-                android:text="@string/warning_card_warning"/>
-
-            <TextView
-                android:id="@+id/warning_card_warning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/warning_frag_warning_card_warning_part_content_margin_left"
-                android:textSize="@dimen/warning_frag_warning_card_text_size"
-                android:textColor="@color/warning_card_warning_text_color"/>
 
         </LinearLayout>
 
