--- a/app/src/main/res/layout/activity_detailed_task.xml
+++ b/app/src/main/res/layout/activity_detailed_task.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/activity_detailed_task_toolbar"
+        android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/detailed_task_actionbar_background_color"
