--- a/app/src/main/res/layout/activity_detailed_worker.xml
+++ b/app/src/main/res/layout/activity_detailed_worker.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/activity_detailed_worker_toolbar"
+        android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
