--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -265,14 +265,16 @@
     <dimen name="detailed_worker_task_schedule_item_id_width">40dp</dimen>
     <dimen name="detailed_worker_task_schedule_listview_divider_height">6dp</dimen>
 
+    <!-- Detailed task/warning -->
+    <dimen name="detailed_actionbar_title_text_size">25dp</dimen>
+    <dimen name="detailed_actionbar_subtitle_text_size">16dp</dimen>
+    <dimen name="detailed_log_padding_left_right">24dp</dimen>
+    <dimen name="detailed_information_padding_top_left_right">24dp</dimen>
+    <dimen name="detailed_information_height">50dp</dimen>
+    <dimen name="detailed_information_text_size">17dp</dimen>
+
     <!-- Detailed task -->
-    <dimen name="detailed_task_actionbar_task_text_size">25dp</dimen>
-    <dimen name="detailed_task_actionbar_case_text_size">16dp</dimen>
-    <dimen name="detailed_task_log_padding_left_right">24dp</dimen>
-    <dimen name="detailed_task_information_padding_top_left_right">24dp</dimen>
-    <dimen name="detailed_task_information_height">50dp</dimen>
-    <dimen name="detailed_task_information_text_size">17dp</dimen>
-    <dimen name="detailed_task_information_warning_padding">4dp</dimen>
+    <dimen name="detailed_information_warning_padding">4dp</dimen>
 
     <!-- Overview-->
     <dimen name="ov_left_pane_width">227dp</dimen>
