--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -267,4 +267,12 @@
         <item name="android:paddingBottom">@dimen/warning_frag_vertical_padding</item>
     </style>
 
+    <style name="WorkerOverviewAttendanceListHeader">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
