--- a/app/src/main/res/layout/worker_ov_attendance_list_item.xml
+++ b/app/src/main/res/layout/worker_ov_attendance_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="50dp"
+    android:minHeight="@dimen/worker_overview_attendance_list_item_min_height"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
