--- a/app/src/main/res/layout/text_spinner_item.xml
+++ b/app/src/main/res/layout/text_spinner_item.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/task_case_spinner_padding"
-    android:background="@drawable/common_block_background">
+    android:background="@drawable/underline_block_background">
 
     <TextView
         android:id="@+id/spinner_text"
         style="@style/TaskCaseTextStyle"
-        android:textSize="@dimen/task_case_spinner_item_text_size"
-        android:layout_centerInParent="true"/>
+        android:textSize="16px"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
