[DrawerMenu] Hide notificetion count

--- a/app/src/main/res/layout/drawer_item_info.xml
+++ b/app/src/main/res/layout/drawer_item_info.xml
@@ -19,6 +19,7 @@
 
     <TextView
         android:id="@+id/drawer_item_info_count"
-        style="@style/DrawerItemInfoCountTextStyle"/>
+        style="@style/DrawerItemInfoCountTextStyle"
+        android:visibility="gone"/>
 
 </RelativeLayout>
