--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -350,4 +350,7 @@
     <dimen name="worker_overview_attendance_list_time_range_padding_left_right">35dp</dimen>
     <dimen name="worker_overview_attendance_list_time_range_padding_top_bottom">6dp</dimen>
 
+    <!-- Display image -->
+    <dimen name="display_image_actionbar_title_text_size">16dp</dimen>
+
 </resources>
