[DisplayImage] Use WebView to display image

--- a/app/src/main/res/layout/activity_display_image.xml
+++ b/app/src/main/res/layout/activity_display_image.xml
@@ -22,10 +22,9 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/display_image"
+    <WebView
+        android:id="@+id/image_web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_dark"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
