[Warning] Refactor warning page
1. WarningCardView: Modify ListView to RecylerView
2. Modify the layout of WarningFragment
3. Fix the bug that sometimes when we select a vendor the warning card view will not refresh
4. Apply DataObserver to refresh this page

--- a/app/src/main/res/drawable/warning_card_background.xml
+++ b/app/src/main/res/drawable/warning_card_background.xml
@@ -8,6 +8,7 @@
             <stroke
                 android:width="@dimen/warning_frag_warning_card_stroke_width"
                 android:color="@color/warning_card_stroke_color" />
+            <solid android:color="@color/warning_background" />
         </shape>
     </item>
 
