--- a/app/src/main/res/drawable/warning_card_task_part_background.xml
+++ b/app/src/main/res/drawable/warning_card_task_part_background.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?colorControlHighlight">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="@dimen/warning_frag_warning_card_stroke_width" />
-            <solid android:color="@color/warning_opened_background_color" />
-        </shape>
-    </item>
+    <corners android:radius="@dimen/warning_frag_warning_card_stroke_width" />
+    <solid android:color="@color/warning_opened_background_color" />
 
-</ripple>
+</shape>
