--- a/app/src/main/res/layout/overview_left_pane.xml
+++ b/app/src/main/res/layout/overview_left_pane.xml
@@ -8,16 +8,28 @@
         android:id="@+id/ov_leftpane_spinner"
         style="@style/OverviewSpinnerStyle"/>
 
-    <include layout="@layout/h_divider"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/main_window_divider_width_height"
+        android:background="@color/main_window_divider_color" />
 
-    <EditText
-        android:id="@+id/ov_leftpane_search_edittext"
-        style="@style/OverviewSearchEditText"/>
-
-    <ListView
-        android:id="@+id/ov_leftpane_listview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@color/gray3"
-        android:dividerHeight="@dimen/ov_left_pane_listview_divider_height" />
+        android:orientation="vertical"
+        android:background="@drawable/common_block_background">
+
+        <EditText
+            android:id="@+id/ov_leftpane_search_edittext"
+            style="@style/OverviewSearchEditText"/>
+
+        <ListView
+            android:id="@+id/ov_leftpane_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/gray3"
+            android:dividerHeight="@dimen/ov_left_pane_listview_divider_height" />
+
+    </LinearLayout>
+
 </LinearLayout>
