[WorkerOverview] Refactor worker overview page

--- a/app/src/main/res/layout/fragment_ov_taskitem.xml
+++ b/app/src/main/res/layout/fragment_ov_taskitem.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:widget="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -21,7 +22,8 @@
         android:layout_marginRight="@dimen/edit_task_margin_right"
         android:layout_marginTop="@dimen/edit_task_margin_top"
         android:text="@string/worker_ov_edit_task_item"
-        android:layout_gravity="right" />
+        android:layout_gravity="right"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:id="@+id/workers_list_vg"
@@ -36,7 +38,7 @@
             android:layout_marginLeft="@dimen/case_overview_worker_margin_left"
             android:text="@string/case_overview_worker" />
 
-        <it.sephiroth.android.library.widget.HListView xmlns:widget="http://schemas.android.com/apk/res-auto"
+        <it.sephiroth.android.library.widget.HListView
             android:id="@+id/workers"
             android:layout_width="match_parent"
             android:layout_height="@dimen/workers_hlist_height"
